--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "bootstrap": "3.1.1",
     "angular-bootstrap": "0.11.0",
     "angular-ui-router": "#master",
-    "ngCart": "plannifnminus1fails/ngCart#master"
+    "ngCart": "plannifnminus1fails/ngCart#master",
+    "angular-rangeslider": "#master"
   }
 }
